# polyforecast

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  streamlit_app.py
.github/workflows/: daily.yml
alembic/: env.py
alembic/versions/: 25d95d551151_initial_schema.py
docs/: ARCHITECTURE.md  PLAN.md
scripts/: cron_hello.py
src/polyforecast/: cli.py  config.py
src/polyforecast/clients/: CLAUDE.md  __init__.py  polymarket.py
src/polyforecast/critic/: CLAUDE.md
src/polyforecast/executor/: CLAUDE.md
src/polyforecast/forecaster/: CLAUDE.md
src/polyforecast/llm/: CLAUDE.md
src/polyforecast/research/: CLAUDE.md
src/polyforecast/scanner/: CLAUDE.md  __init__.py  scan.py
src/polyforecast/sizer/: CLAUDE.md
src/polyforecast/storage/: CLAUDE.md  __init__.py  base.py  models.py
src/polyforecast/tracker/: CLAUDE.md
