[project]
name = "polyforecast"
version = "0.1.0"
description = "LLM-powered forecasting and paper-trading on Polymarket"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",  # retries
    "pyyaml>=6.0.0",
    "streamlit>=1.40.0",
]

[project.scripts]
polyforecast = "polyforecast.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",  # httpx mocking
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC", "PL"]
ignore = ["PLR0913"]  # too many arguments — we pass lots of config

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic values ok in tests

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=polyforecast --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyforecast"]
